@@ -1,6 +1,6 @@
 <?php
 // $Id$
-// This footer file detects whether Gallery is embedded in any 
+// This footer file detects whether Gallery is embedded in any
 // known PHP applications and then decorates Gallery appropriately.
 
 global $GALLERY_EMBEDDED_INSIDE_TYPE;
@@ -19,6 +19,7 @@ switch($GALLERY_EMBEDDED_INSIDE_TYPE) {
 		 * also change it in wrapper.header
 		 */
 		global $index;
+		global $GALLERY_POSTNUKE_VERSION;
 		$index = 0;
 
 		CloseTable();
@@ -40,12 +41,12 @@ switch($GALLERY_EMBEDDED_INSIDE_TYPE) {
 		global $db;
 		global $do_gzip_compress;
 		global $lang;
-		
+
 		include (PHPBB_ROOT_PATH . "includes/page_tail.php");
 	break;
 
 	case 'GeekLog':
-	
+
 	/*
 	** We can control whether we see the right side blocks
 	** by setting passing a parameter to COM_siteFooter.
@@ -65,12 +66,12 @@ if (isDebugging()) {
 	}
 	else {
 		$infoText .= 'Embedded in: '. $GALLERY_EMBEDDED_INSIDE_TYPE;
-		
+
 		switch($GALLERY_EMBEDDED_INSIDE_TYPE) {
 			case 'phpnuke':
 			break;
 			case 'postnuke':
-				$infoText .= ' '. _PN_VERSION_NUM;
+				$infoText .= ' '. $GALLERY_POSTNUKE_VERSION;
 			break;
 			case 'cpgnuke':
 			break;
@@ -80,7 +81,7 @@ if (isDebugging()) {
 			break;
 		}
 	}
-	
+
     echo infoLine($infoText, 'error');
 }
 ?>
