@@ -1,3 +1,14 @@
+2007-02-07 Jens Tkotz <jens@peino.de> 1.5.6-svn-b11
+
+ * Fix/Change:
+ 
+    In postNuke 0.8, _PN_VERSION_NUM and _PN_VERSION_ID were renamed.
+    Leading _ is removed.
+       
+    Invented new global $GALLERY_POSTNUKE_VERSION, set in index.php
+          
+    Thanks to 'tycho' from Forum.
+           
 2007-02-07 Jens Tkotz <jens@peino.de> 1.5.6-svn-b10
 
  Ported over from 1.6
